# reachy2_modelling

./: .gitattributes  .gitmodules  README.md  env.yaml  makefile  meshcat_shapes.py  orbita2d.urdf  pinocchio_reachy.ipynb  pinocchio_reachy_pink.ipynb  pyproject.toml  reachable_space_utils.py  reachy2_interactive_performance_evaluation.ipynb  reachy_rtb.py  requirements.txt
bags/: .gitignore  README.md  all_analyzebags.sh  all_bagtocsv.sh  all_cleanbagdirs.sh  all_extract.sh  all_generate_images.sh  analyze_bagdir.py  analyze_csv.py  backup_csvs.sh  bagdir_to_csv.py  bagdir_to_rerun.py  bagtocsv.sh  combine_csv.sh  load_csv_pandas.py  manip_analysis.py  merge_arms_dataframe.py  posecsv_to_symik.py  reliability_override.yaml  topic_to_csv.py  verify_csvs.sh
bags/simpletest/: l_arm_target_pose.csv  r_arm_target_pose.csv
examples/: example_reachy_jacobian_old.py  meshcat_urdf.py  rerun_example1.py
models/: panda.urdf  reachy_kdl.py  reachy_pinocchio.py  reachy_rtb.py
models/kdl_parser_py/: __init__.py
notebooks/: meshcat_shapes.py  reachable_space_utils.py  reachy2_collisions_pinocchio_example.ipynb  reachy2_interactive_performance_evaluation.ipynb  reachy2_reachablility_vs_manipulability.ipynb  reahy2_reachable_taskspace_for_grasps.ipynb
notebooks/.ipynb_checkpoints/: pinocchio_reachy-checkpoint.ipynb  reachy2_collisions_pinocchio-checkpoint.ipynb  (+1 more)
tests/: example_reachy_fk_old.py  meshcat_urdf.py  reachy_fk_combined.py  reachy_jacobian_combined.py  rerun_example1.py  test_combined.py  test_reachy_fk.py  test_reachy_fk_old.py  test_reachy_meshcat.py
(+24 files in other folders)
